--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <ul id="navList">
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
+          <li><a href="#skills">experience</a></li>
           <li><a href="#project">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
           
