--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <section id="home" class="hero" aria-label="hero">
         <div class="intro">
           <h1>Hi — I'm Sahil Khanna</h1>
-          <p>I build responsive web apps and simple delightful UI. I love JavaScript, React, and clean code.</p>
+          <p>I build responsive web apps and simple delightful UI. I love JavaScript, React, and clean code.I wnated to become a mern stack developer.</p>
           <div class="links">
             <a class="btn btn-primary" href="#contact">Hire Me</a>
             <a class="btn" href="https://github.com/" target="_blank" rel="noreferrer">GitHub</a>
